; ModuleID = '/home/carl/AnghaBench/redis/src/extr_redis-cli.c_clusterManagerShowNodes.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_redis-cli.c_clusterManagerShowNodes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32* }

@cluster_manager = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @clusterManagerShowNodes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clusterManagerShowNodes() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cluster_manager, i32 0, i32 0), align 4
  %6 = call i32 @listRewind(i32 %5, i32* %1)
  br label %7

7:                                                ; preds = %10, %0
  %8 = call %struct.TYPE_4__* @listNext(i32* %1)
  store %struct.TYPE_4__* %8, %struct.TYPE_4__** %2, align 8
  %9 = icmp ne %struct.TYPE_4__* %8, null
  br i1 %9, label %10, label %21

10:                                               ; preds = %7
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %3, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i64 @clusterManagerNodeInfo(i32* %14, i32 0)
  store i64 %15, i64* %4, align 8
  %16 = load i64, i64* %4, align 8
  %17 = inttoptr i64 %16 to i8*
  %18 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %17)
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @sdsfree(i64 %19)
  br label %7

21:                                               ; preds = %7
  ret void
}

declare dso_local i32 @listRewind(i32, i32*) #1

declare dso_local %struct.TYPE_4__* @listNext(i32*) #1

declare dso_local i64 @clusterManagerNodeInfo(i32*, i32) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @sdsfree(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
